--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,5 +1,5 @@
 <div class="container text-center">
-    <h1>About Page</h1>
-    <P>We are DevMatch. Our company focuses on creating an exclusive community
-    developers and entrepreneurs to meet.</P>
+    <h1>About Us</h1>
+    <P>We are DevMatch. Our company focuses on creating an exclusive community for
+    developers, investors and entrepreneurs to meet.</P>
 </div>
